# CPT-180-27-Assignment-3-Libraries

./: CMakeLists.txt  assignment3(function)  assignment3.cpp  file_reader.h  main.cpp  read_config.h  reader.cpp  reader.h
Assignment 3/: CMakeLists.txt  main.cpp  reader.h
Assignment 3/Driver/: CMakeLists.txt  main.cpp
driver/: CMakeLists.txt  Config.txt  config  config.txt  getConfig.h  main.cpp
driver/TestLib/: CMakeLists.txt  libassignment.h  main.cpp
driver/config/: app.cfg
lib/: Assignment3-Libraries.h  CMakeLists.txt  app.cfg  config.h  libGetConfig.cpp  libassignment.h  libraries.h  main.cpp  reader.cpp  reader.h
libraries/: CMakeLists.txt  main.cpp
